add content to home page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>The name is Barnes.</h1>
+<h1>Zac Barnes.</h1>
+<h1>Web Developer.</h1>
+
+<%= link_to 'About', about_path %>
+<%= link_to 'Contact', contact_path %>
+<%= link_to 'Portfolio', portfolio_path %>
