add content to portfolio page

--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -1,3 +1,8 @@
-<h1>Portfolio Page</h1>
+<h1>My Portfolio</h1>
+
+<%= image_tag('tbmm.png', alt: 'The Beard Maketh the Man', class: 'portfolio-image') %>
+
+<%= image_tag('trading-faces.png', alt: 'Trading Faces', class: 'portfolio-image') %>
+
 
 <%= link_to 'Home', root_path %>
