add footer with link to login page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 	<div class="container">
 		<%= yield %>
+		<p class="footer">&copy;2015 <%= link_to 'Zac Barnes', login_path, class: 'login-link' %></p>
 	</div>
 </body>
 </html>
