style home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
 <body>
 	<div class="container">
 		<%= yield %>
-		<p class="footer">&copy;2015 <%= link_to 'Zac Barnes', login_path, class: 'login-link' %></p>
 	</div>
+	<nav class="navbar-fixed-bottom">
+		<div class="container footer">
+			<p>&copy;2015 <%= link_to 'Zac Barnes', login_path, class: 'login-link' %></p>
+		</div>
+	</nav>
 </body>
 </html>
