--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.catch-phrase {
+	margin-top: 5%;
+	text-align: center;
+}
+
+.navigation {
+	text-align: center;
+	margin: 5% 0;
+}
+
+.nav-link {
+	margin: 0 5%;
+}
+
+.footer {
+	text-align: center;
+	width: 100%;
+}
+
+
