--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,11 @@
-<h1>The name is Barnes.</h1>
-<h1>Zac Barnes.</h1>
-<h1>Web Developer.</h1>
+<div class="catch-phrase">
+	<h1>The name is Barnes.</h1>
+	<h1>Zac Barnes.</h1>
+	<h1>Web Developer.</h1>
+</div>
 
-<%= link_to 'About', about_path %>
-<%= link_to 'Contact', contact_path %>
-<%= link_to 'Portfolio', portfolio_path %>
+<div class="navigation">
+	<%= link_to 'About', about_path, class: 'nav-link' %>
+	<%= link_to 'Contact', contact_path, class: 'nav-link' %>
+	<%= link_to 'Portfolio', portfolio_path, class: 'nav-link' %>
+</div>
