add photo to index page and style it

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,16 +9,29 @@
 
 .navigation {
 	text-align: center;
-	margin: 5% 0;
+	margin: 3% 0;
 }
 
 .nav-link {
-	margin: 0 5%;
+	margin: 0 3%;
+}
+
+.header {
+	text-align: center;
 }
 
 .footer {
 	text-align: center;
 	width: 100%;
+}
+
+.home-link {
+	text-align: center;
+	margin: 10px;
+}
+
+.index-photo {
+	margin: auto;
 }
 
 
