--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="catch-phrase">
-	<h1>The name is Barnes.</h1>
+	<h1>The Name is Barnes.</h1>
 	<h1>Zac Barnes.</h1>
 	<h1>Web Developer.</h1>
 </div>
@@ -9,3 +9,5 @@
 	<%= link_to 'Contact', contact_path, class: 'nav-link' %>
 	<%= link_to 'Portfolio', portfolio_path, class: 'nav-link' %>
 </div>
+
+<%= image_tag 'zac2.jpg', alt: 'Zac Barnes', class: 'img-responsive img-rounded index-photo' %>
