move home links to top of page

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,9 +1,12 @@
-<h1>About Me</h1>
+<h1 class="header">About Me</h1>
+
+<div class="home-link">
+	<%= link_to 'Home', root_path %>
+</div>
+
 <p>I am a Virginia Beach, VA native who loves to travel, game, and read. My background is in mortgage underwriting but I gave all that up in March 2014 to pursue my true passions of travel and code. I spent 6 months living in South America, teaching myself basic coding and meeting entrepreneurs in the area. I recently graduated from <a href="https://devbootcamp.com/">Dev Bootcamp</a>, an intensive 19 week web development course.</p>
 
 <p>I always try to find new projects to build that are going to stretch me as a developer. Constantly trying new things and using new technologies is somewhat of a hobby of mine. I find that I am most effective in situations that are just beyond my depth. If I ever become too complacent with my code, I believe it is time for me to shake things up.</p>
 
 <p>When not coding, I enjoy reading, gaming, gardening, exploring nature, traveling, and watching Netflix. My favorite book series are The Name of the Wind, Song of Ice and Fire, and the Gentlemen Bastards. You will often find me watching Game of Thrones, Breaking Bad, Peaky Blinders, and The Walking Dead. I love to explore new places so I take every opportunity I get to travel.</p>
-
-<%= link_to 'Home', root_path %>
 
