--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,10 +1,13 @@
-<h1>Contact Me</h1>
+<h1 class="header">Contact Me</h1>
+
+<div class="home-link">
+	<%= link_to 'Home', root_path %>
+</div>
+
 <p>If you want to contact me, here are the best ways:</p>
+
 <ul>
 	<li>Email: <a href="mailto:zac.barnes89@gmail.com">zac.barnes89@gmail.com</a></li>
 	<li>Github: <a href="https://github.com/zbarnes757">zbarnes757</a></li>
 	<li>Twitter: <a href="https://twitter.com/ZB_VB">ZB_VB</a></li>
 </ul>
-
-<%= link_to 'Home', root_path %>
-
