--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -1,8 +1,10 @@
-<h1>My Portfolio</h1>
+<h1 class="header">My Portfolio</h1>
+<div class="home-link">
+	<%= link_to 'Home', root_path %>
+</div>
 
 <%= image_tag('tbmm.png', alt: 'The Beard Maketh the Man', class: 'portfolio-image') %>
 
 <%= image_tag('trading-faces.png', alt: 'Trading Faces', class: 'portfolio-image') %>
 
 
-<%= link_to 'Home', root_path %>
