remove contact page and add to about page

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -15,6 +15,14 @@
 		<p>I always try to find new projects to build that are going to stretch me as a developer. Constantly trying new things and using new technologies is somewhat of a hobby of mine. I find that I am most effective in situations that are just beyond my depth. If I ever become too complacent with my code, I believe it is time for me to shake things up.</p>
 
 		<p>When not coding, I enjoy reading, gaming, gardening, exploring nature, traveling, and watching Netflix. My favorite book series are The Name of the Wind, Song of Ice and Fire, and the Gentlemen Bastards. You will often find me watching Game of Thrones, Breaking Bad, Peaky Blinders, and The Walking Dead. I love to explore new places so I take every opportunity I get to travel.</p>
+
+		<p>Here are the best ways to contact me:</p>
+
+		<ul>
+			<li>Email: <a href="mailto:zac.barnes89@gmail.com">zac.barnes89@gmail.com</a></li>
+			<li>Github: <a href="https://github.com/zbarnes757">zbarnes757</a></li>
+			<li>Twitter: <a href="https://twitter.com/ZB_VB">ZB_VB</a></li>
+		</ul>
 	</div>
 
 </div>
