replace links with images for contact

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -34,6 +34,12 @@
 	margin: auto;
 }
 
+.img-responsive.contact-image {
+	width: 57px;
+	display: inline-block;
+	margin: 15px;
+}
+
 /* FLIPPING CSS (http://davidwalsh.name/css-flip) */
 /* entire container, keeps perspective */
 .flip-container {
