--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -16,13 +16,9 @@
 
 		<p>When not coding, I enjoy reading, gaming, gardening, exploring nature, traveling, and watching Netflix. My favorite book series are The Name of the Wind, Song of Ice and Fire, and the Gentlemen Bastards. You will often find me watching Game of Thrones, Breaking Bad, Peaky Blinders, and The Walking Dead. I love to explore new places so I take every opportunity I get to travel.</p>
 
-		<p>Here are the best ways to contact me:</p>
-
-		<ul>
-			<li>Email: <a href="mailto:zac.barnes89@gmail.com">zac.barnes89@gmail.com</a></li>
-			<li>Github: <a href="https://github.com/zbarnes757">zbarnes757</a></li>
-			<li>Twitter: <a href="https://twitter.com/ZB_VB">ZB_VB</a></li>
-		</ul>
+		<a href="mailto:zac.barnes89@gmail.com"><%= image_tag 'email.svg', alt: 'email link', class: 'img-responsive contact-image' %></a>
+		<a href="https://github.com/zbarnes757"><%= image_tag 'github.svg', alt: 'github link', class: 'img-responsive contact-image' %></a>
+		<a href="https://twitter.com/ZB_VB"><%= image_tag 'twitter.svg', alt: 'twitter link', class: 'img-responsive contact-image' %></a>
 	</div>
 
 </div>
