--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+h1, h4, p, a {
+	font-family: 'Droid Serif', serif;
+}
+
 .catch-phrase {
 	margin-top: 5%;
 	text-align: center;
