align portfolio links and add a little margin

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -48,6 +48,16 @@ p, a {
 	margin: 15px;
 }
 
+.portfolio-links {
+	text-align: center;
+	margin-top: 10px;
+}
+
+.portfolio-link {
+	display: inline-block;
+	margin-right: 1em;
+}
+
 /* FLIPPING CSS (http://davidwalsh.name/css-flip) */
 /* entire container, keeps perspective */
 .flip-container {
