emphasize name on index page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="catch-phrase">
 	<h1>The Name is Barnes.</h1>
-	<h1>Zac Barnes.</h1>
+	<h1><em>Zac Barnes.</em></h1>
 	<h1>Web Developer.</h1>
 </div>
 
