add a portfolio title to each item

--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -11,7 +11,8 @@
 				<%= image_tag 'tbmm.png', alt: 'The Beard Maketh the Man', class: 'portfolio-image img-responsive img-rounded' %>
 			</div>
 			<div class="back">
-				<h4>An application to help users find beard grooming products with the Etsy api. Built with Sinatra and vanilla JavaScript.</h4>
+				<h3 class="portfolio-title">The Beard Maketh the Man</h3>
+				<h4>TBMM is an application to help users find beard grooming products with the Etsy api. Built with Sinatra and vanilla JavaScript.</h4>
 				<div class="portfolio-links">
 					<a href="https://github.com/zbarnes757/TBMM" class="portfolio-link">Github</a>
 					<a href="https://tbmm.herokuapp.com/" class="portfolio-link">Heroku</a>
@@ -26,6 +27,7 @@
 				<%= image_tag 'trading-faces.png', alt: 'Trading Faces', class: 'portfolio-image img-responsive img-rounded' %>
 			</div>
 			<div class="back">
+				<h3 class="portfolio-title">Trading Faces</h3>
 				<h4>Trading Faces is a game where friends compete to see who can imitate the funniest face.  The faces are compared using Face++ facial recognition technology, and a rating is generated based on how well you imitated the other players face.
 
 				Trading Faces is built with decouple architecture (to optimize for mobile development), and uses Rails for the back-end, Javascript, JQuery, and Handlebars for the front-end, Facebook OAuth, and Face++ API.</h4>
