--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="catch-phrase">
 	<h1>The Name is Barnes.</h1>
 	<h1><em>Zac Barnes.</em></h1>
-	<h1>Web Developer.</h1>
+	<h1>Full Stack Developer.</h1>
 </div>
 
 <div class="navigation">
