--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,4 +7,5 @@
 <div class="navigation">
 	<%= link_to 'About', about_path, class: 'nav-link' %>
 	<%= link_to 'Portfolio', portfolio_path, class: 'nav-link' %>
+	<%= link_to 'Blog', blogs_path, class: 'nav-link' %>
 </div>
