--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Blog#index</h1>
-<p>Find me in app/views/blog/index.html.erb</p>
+<h1>Blog</h1>
+<ul>
+	<% @blogs.each do |blog| %>
+		<li><%= link_to blog.title, blog %></li>
+	<% end %>
+</ul>
