setup show page

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Blog#show</h1>
-<p>Find me in app/views/blog/show.html.erb</p>
+<h1><%= @blog.title %></h1>
+<p><%= @blog.date %></p>
+<p><%= @blog.content %></p>
