--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,3 +1,10 @@
-<h1><%= @blog.title %></h1>
-<p><%= @blog.date %></p>
-<p><%= @blog.content %></p>
+<h1 class="header"><%= @blog.title %></h1>
+<p class="header"><%= @blog.date %></p>
+<div class="row">
+	<div class="col-md-8 col-md-offset-2">
+		<p><%= @blog.content %></p>
+	</div>
+</div>
+<div class="home-link">
+	<%= link_to 'Back to Blogs', blogs_path %>
+</div>
