add bibliofyl project to portfolio page

--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -41,4 +41,23 @@
 
 </div>
 
+<div class="row">
+	<div class="flip-container">
+		<div class="flipper">
+			<div class="front">
+				<%= image_tag 'bibliofyl.png', alt: 'Bibliofyl', class: 'portfolio-image img-responsive img-rounded' %>
+			</div>
+			<div class="back">
+				<h3 class="portfolio-title">Bibliofyl</h3>
+				<h4>Bibliofyl is a web app to show the best local bookstores around DC. It was built with the mapbox.js library.</h4>
+				<div class="portfolio-links">
+					<a href="https://github.com/zbarnes757/bibliofyl" class="portfolio-link">Github</a>
+					<a href="https://zbarnes757.github.io/bibliofyl/" class="portfolio-link">Website</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+
 
