change portfolios to static items

--- a/app/views/welcome/portfolio.html.erb
+++ b/app/views/welcome/portfolio.html.erb
@@ -4,60 +4,48 @@
 </div>
 
 <div class="row">
-
-	<div class="flip-container">
-		<div class="flipper">
-			<div class="front">
-				<%= image_tag 'tbmm.png', alt: 'The Beard Maketh the Man', class: 'portfolio-image img-responsive img-rounded' %>
-			</div>
-			<div class="back">
-				<h3 class="portfolio-title">The Beard Maketh the Man</h3>
-				<h4>TBMM is an application to help users find beard grooming products with the Etsy api. Built with Sinatra and vanilla JavaScript.</h4>
-				<div class="portfolio-links">
-					<a href="https://github.com/zbarnes757/TBMM" class="portfolio-link">Github</a>
-					<a href="https://tbmm.herokuapp.com/" class="portfolio-link">Heroku</a>
-				</div>
-			</div>
+	<div class="col-md-6">
+		<%= image_tag 'tbmm.png', alt: 'The Beard Maketh the Man', class: 'portfolio-image img-responsive img-rounded' %>
+	</div>
+	<div class="col-md-6">
+		<h3 class="portfolio-title">The Beard Maketh the Man</h3>
+		<h4>TBMM is an application to help users find beard grooming products with the Etsy api. Built with Sinatra and vanilla JavaScript.</h4>
+		<div class="portfolio-links">
+			<a href="https://github.com/zbarnes757/TBMM" class="portfolio-link">Github</a>
+			<a href="https://tbmm.herokuapp.com/" class="portfolio-link">Website</a>
 		</div>
 	</div>
-
-	<div class="flip-container">
-		<div class="flipper">
-			<div class="front">
-				<%= image_tag 'trading-faces.png', alt: 'Trading Faces', class: 'portfolio-image img-responsive img-rounded' %>
-			</div>
-			<div class="back">
-				<h3 class="portfolio-title">Trading Faces</h3>
-				<h4>Trading Faces is a game where friends compete to see who can imitate the funniest face.  The faces are compared using Face++ facial recognition technology, and a rating is generated based on how well you imitated the other players face.
-
-				Trading Faces is built with decouple architecture (to optimize for mobile development), and uses Rails for the back-end, Javascript, JQuery, and Handlebars for the front-end, Facebook OAuth, and Face++ API.</h4>
-				<div class="portfolio-links">
-					<a href="https://github.com/evanhughes3/TradingFaces" class="portfolio-link">Github</a>
-					<a href="https://trading-faces.herokuapp.com" class="portfolio-link">Heroku</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
 </div>
 
 <div class="row">
-	<div class="flip-container">
-		<div class="flipper">
-			<div class="front">
-				<%= image_tag 'bibliofyl.png', alt: 'Bibliofyl', class: 'portfolio-image img-responsive img-rounded' %>
-			</div>
-			<div class="back">
-				<h3 class="portfolio-title">Bibliofyl</h3>
-				<h4>Bibliofyl is a web app to show the best local bookstores around DC. It was built with the mapbox.js library.</h4>
-				<div class="portfolio-links">
-					<a href="https://github.com/zbarnes757/bibliofyl" class="portfolio-link">Github</a>
-					<a href="https://zbarnes757.github.io/bibliofyl/" class="portfolio-link">Website</a>
-				</div>
-			</div>
+	<div class="col-md-6">
+		<%= image_tag 'trading-faces.png', alt: 'Trading Faces', class: 'portfolio-image img-responsive img-rounded' %>
+	</div>
+	<div class="col-md-6">
+		<h3 class="portfolio-title">Trading Faces</h3>
+		<h4>Trading Faces is a game where friends compete to see who can imitate the funniest face.  The faces are compared using Face++ facial recognition technology, and a rating is generated based on how well you imitated the other players face.
+
+		Trading Faces is built with decouple architecture (to optimize for mobile development), and uses Rails for the back-end, Javascript, JQuery, and Handlebars for the front-end, Facebook OAuth, and Face++ API.</h4>
+		<div class="portfolio-links">
+			<a href="https://github.com/evanhughes3/TradingFaces" class="portfolio-link">Github</a>
+			<a href="https://trading-faces.herokuapp.com" class="portfolio-link">Website</a>
 		</div>
 	</div>
+</div>
 
+
+<div class="row">
+	<div class="col-md-6">
+		<%= image_tag 'bibliofyl.png', alt: 'Bibliofyl', class: 'portfolio-image img-responsive img-rounded' %>
+	</div>
+	<div class="col-md-6">
+		<h3 class="portfolio-title">Bibliofyl</h3>
+		<h4>Bibliofyl is a web app to show the best local bookstores around DC. It was built with the mapbox.js library.</h4>
+		<div class="portfolio-links">
+			<a href="https://github.com/zbarnes757/bibliofyl" class="portfolio-link">Github</a>
+			<a href="https://zbarnes757.github.io/bibliofyl/" class="portfolio-link">Website</a>
+		</div>
+	</div>
 </div>
 
 
